--- a/style.css
+++ b/style.css
@@ -1,4 +1,87 @@
-body{
-    margin: 20px;
-    font-family: sans-serif;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: monospace;
+}
+
+.banner {
+  width: 100%;
+  height: 100vh;
+    background-color: black;
+    color: white;
+}
+
+.centered-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    margin: 0;
+    font-size: 24px;
+}
+
+.content{
+width: 100%;
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+text-align: center;
+color: white;
+}
+
+.content h1{
+font-size: 70px;
+margin-top: 80px;
+}
+
+.content p{
+margin: 20px auto;
+font-weight: 100;
+line-height: 25px;
+}
+
+.navbar{
+width: 85%;
+margin: auto;
+padding: 35px 0;
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+
+.logo{
+width: 120px;
+cursor: pointer;
+}
+
+.navbar ul li{
+list-style: none;
+display: inline-block;
+margin: 0 20px;
+position: relative;
+}
+
+.navbar ul li a{
+text-decoration: none;
+color: white;
+}
+
+.navbar ul li::after{
+content: '';
+height: 3px;
+width: 0;
+background: #FE791D;
+position: absolute;
+left: 0;
+bottom: -10px;
+transition: 0.5s;
+}
+
+.navbar ul li:hover::after{
+width: 100%;
 }
