--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-color: #FE791D;
   color: black;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 70px;
   position: relative;
