--- a/style.css
+++ b/style.css
@@ -10,13 +10,22 @@ body {
 
 .project{ 
   background-color: #FE791D;
+  padding-top: 30px;
+  /* color: black;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto; */
+  /* padding: 30px; */
+  /* position: relative; */
+}
+
+.aproj{
   color: black;
   width: 100%;
   height: 100vh;
   margin: 0 auto;
-  padding: 70px;
+  padding: 100px;
   position: relative;
-  margin: 70px 0;
 }
 
 .banner {
